# MashMap

./: .gitignore  CMakeLists.txt  LICENSE.txt
.github/test-data/: 10-reads.fasta
.github/workflows/: tests.yml
src/align/include/: computeAlignments.hpp
src/map/: mash_map.cpp
src/map/include/: MIIteratorL2.hpp  base_types.hpp  commonFunc.hpp  computeMap.hpp  map_parameters.hpp  parseCmdArgs.hpp  slidingMap.hpp  winSketch.hpp
